# DIPWizards

./: README.md  pyproject.toml  requirements.txt  setup.py
Core/: old.py  utils.py
dipwizards/: save.py
