[tool.poetry]
name = "dipwizards"
version = "0.1.0"
description = ""
authors = ["AIWizardsTeam <aiwizardsteam@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.0"
opencv-python = "^4.8.0.76"
requests = "^2.31.0"
pillow = "^10.0.0"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
